--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,10 +20,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "types": [
+      "vitest/globals"
+    ]
   },
   "include": [
     "src",
-    "node_modules/vitest/globals.d.ts"
+    "test-setup.ts"
   ]
 }
