--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint:js": "eslint .",
+    "lint:css": "stylelint \"**/*.{ts,tsx}\"",
+    "lint": "npm run lint:js && npm run lint:css",
     "test": "vitest",
     "preview": "vite preview"
   },
@@ -22,12 +24,16 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "happy-dom": "^14.12.3",
+    "postcss-styled-syntax": "^0.6.4",
     "styled-components": "^6.1.12",
+    "stylelint": "^16.8.2",
+    "stylelint-config-standard": "^36.0.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
