--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "happy-dom": "^14.12.3",
+    "jest-styled-components": "^7.2.0",
     "postcss-styled-syntax": "^0.6.4",
     "styled-components": "^6.1.12",
     "stylelint": "^16.8.2",
