--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:css": "stylelint \"**/*.{ts,tsx}\"",
     "lint": "npm run lint:js && npm run lint:css",
     "test": "vitest",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "^18.3.1",
@@ -38,6 +39,7 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "husky": "^8.0.0"
   }
 }
