--- a/package.json
+++ b/package.json
@@ -13,6 +13,13 @@
     "preview": "vite preview",
     "prepare": "husky install"
   },
+  "lint-staged": {
+    "*.{js,cjs,ts,tsx}": [
+      "vitest related --run",
+      "eslint --fix",
+      "stylelint --fix"
+    ]
+  },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
@@ -31,7 +38,9 @@
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
     "happy-dom": "^14.12.3",
+    "husky": "^8.0.0",
     "jest-styled-components": "^7.2.0",
+    "lint-staged": "^15.2.9",
     "postcss-styled-syntax": "^0.6.4",
     "styled-components": "^6.1.12",
     "stylelint": "^16.8.2",
@@ -39,7 +48,6 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
-    "vitest": "^2.0.5",
-    "husky": "^8.0.0"
+    "vitest": "^2.0.5"
   }
 }
