--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "npm run lint:js && npm run lint:css",
     "test": "vitest",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "lint-staged": {
     "*.{js,cjs,ts,tsx}": [
@@ -25,7 +27,16 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.7.0",
     "@eslint/js": "^9.9.0",
+    "@storybook/addon-essentials": "^8.2.9",
+    "@storybook/addon-interactions": "^8.2.9",
+    "@storybook/addon-links": "^8.2.9",
+    "@storybook/addon-onboarding": "^8.2.9",
+    "@storybook/blocks": "^8.2.9",
+    "@storybook/react": "^8.2.9",
+    "@storybook/react-vite": "^8.2.9",
+    "@storybook/test": "^8.2.9",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
@@ -36,12 +47,14 @@
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-storybook": "^0.8.0",
     "globals": "^15.9.0",
     "happy-dom": "^14.12.3",
     "husky": "^8.0.0",
     "jest-styled-components": "^7.2.0",
     "lint-staged": "^15.2.9",
     "postcss-styled-syntax": "^0.6.4",
+    "storybook": "^8.2.9",
     "styled-components": "^6.1.12",
     "stylelint": "^16.8.2",
     "stylelint-config-standard": "^36.0.1",
@@ -49,5 +62,10 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1",
     "vitest": "^2.0.5"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
